Update address in index.html

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
             <p>
               <!-- Sayanas - 650 <br> -->
               <!-- Palamukku, Nedumpana Road<br> -->
-              Kollam, Kerala <br>
+              Happy Dale Building,<br> Corporate Office, 1st Floor,<br> Opposite Qahwa Restaurant,Kollam, Kerala <br>
               India <br><br>
               <strong>Phone:</strong>  +91 97782 26340 <br>
               <strong>Email:</strong> connect@willgibbins.com<br>
