--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>  Home | Will Gibbins & Co. </title>
+  <title>  Home | Will Gibbins Connect </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
       <h1 class="logo me-auto"><a href=""> 
-        <!-- Will Gibbins & Co.<span></span> -->
+        <!-- Will Gibbins Connect<span></span> -->
         <img src="static/img/logo.png" alt="" class="img-fluid">
       </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -109,7 +109,7 @@
             <div class="content">
               <h3 class="why-us">Why WillGibbins </h3>
               <p class="why-us" style="line-height: 1.2;">
-                At Will Gibbins, we are passionate about technology and its power to transform businesses. <br><br>
+                At Will Gibbins Connect, we are passionate about technology and its power to transform businesses. <br><br>
                 We believe that every organization deserves access to cutting-edge IT solutions that can help 
                 them optimize their performance, increase their productivity, and drive growth. That's why we offer a 
                 comprehensive range of IT services that are designed to meet the unique needs of each client.
@@ -686,7 +686,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Will Gibbins & Co.<span></span></h3>
+            <h3>Will Gibbins Connect.<span></span></h3>
             <p>
               <!-- Sayanas - 650 <br> -->
               <!-- Palamukku, Nedumpana Road<br> -->
@@ -734,7 +734,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Will Gibbins & Co.</span></strong> All Rights Reserved
+          &copy; Copyright <strong><span>Will Gibbins Connect.</span></strong> All Rights Reserved
         </div>
        
       </div>
