--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href=""> 
+      <h1 class="wgclogo me-auto"><a href=""> 
         <!-- Will Gibbins Connect<span></span> -->
-        <img src="static/img/logo.png" alt="" class="img-fluid">
+        <img src="static/img/wgclogo.png" alt="" class="img-fluid">
       </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="static/img/logo.png" alt=""></a>-->
