--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="wgclogo me-auto"><a href=""> 
+      <h1 class="logo me-auto"><a href=""> 
         <!-- Will Gibbins Connect<span></span> -->
         <img src="static/img/wgclogo.png" alt="" class="img-fluid">
       </a></h1>
